Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33445

Code completion fails to convert s. to s->

XMLWordPrintable

    • 2c99f45d8 (master)

      Squish test tst_memberoperator fails.

      Test steps:
      1. Start Creator with clang disabled
      2. Create a new  'Qt Console Application' project
      3. Write 'auto *s = new QString();' to the editor
      4. Write 's.' to the editor
       
      Result:
      Previously 's.' was changed to 's->', but now it stays unchanged. If 96c5862c01b98cbdcbb2bb584773c10e10f5549d is reverted, functionality is as before.

        For Gerrit Dashboard: QTCREATORBUG-33445
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            jukkanokso Jukka Nokso
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes