CPlusPlus: Fix "dot to arrow" completion

Amends 96c5862c01b98cbdcbb2bb584773c10e10f5549d.

Fixes: QTCREATORBUG-33445
Change-Id: I4c8267404ca1d5b7490244bebbf2fae074c0bd5e
Reviewed-by: Christian Stenger <christian.stenger@qt.io>